masonry_core/src/widgets/snapshots/masonry_core__widgets__textbox__tests__simple_textbox.snap
---
source: masonry_core/src/widget/textbox.rs
assertion_line: 728
expression: harness.root_widget()

---
SizedBox(
    TextBox(
        Portal(
            TextComponent,
        ),
    ),
)
