masonry_core/src/widgets/snapshots/masonry_core__widgets__textbox__tests__simple_textbox_placeholder.snap
---
source: masonry_core/src//widget/textbox.rs
assertion_line: 737
expression: harness.root_widget()

---
TextBox(
    Portal(
        TextComponent,
    ),
)
